[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Battle.gd" type="Script" id=1]
[ext_resource path="res://resources/font-resources/Monotype Type.tres" type="DynamicFont" id=2]

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="Panel" parent="UI"]
margin_top = 752.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleUI" type="Control" parent="UI/BottomPanel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="UI/BottomPanel/BattleUI"]
margin_left = 1728.0
margin_top = 16.0
margin_right = 1880.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spells" type="Button" parent="UI/BottomPanel/BattleUI"]
margin_left = 1728.0
margin_top = 96.0
margin_right = 1880.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 2 )
text = "Spells"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="UI/BottomPanel/BattleUI"]
margin_left = 1728.0
margin_top = 176.0
margin_right = 1880.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 2 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Button" parent="UI/BottomPanel/BattleUI"]
margin_left = 1728.0
margin_top = 256.0
margin_right = 1880.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 2 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightHP" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos1" type="Label" parent="UI/RightHP"]
visible = false
margin_left = 1536.0
margin_top = 800.0
margin_right = 1662.0
margin_bottom = 838.0
custom_fonts/font = ExtResource( 2 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name3" type="Label" parent="UI/RightHP/pos1"]
anchor_left = -0.762
anchor_top = 3.158
anchor_right = -0.762
anchor_bottom = 3.158
margin_left = -23.988
margin_top = -120.004
margin_right = 45.012
margin_bottom = -82.004
custom_fonts/font = ExtResource( 2 )
text = "Name"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos2" type="Label" parent="UI/RightHP"]
visible = false
margin_left = 1536.0
margin_top = 848.0
margin_right = 1662.0
margin_bottom = 886.0
custom_fonts/font = ExtResource( 2 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name2" type="Label" parent="UI/RightHP/pos2"]
anchor_left = -0.825
anchor_top = 0.5
anchor_right = -0.825
anchor_bottom = 0.5
margin_left = -16.05
margin_top = -19.0
margin_right = 52.95
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos3" type="Label" parent="UI/RightHP"]
visible = false
margin_left = 1536.0
margin_top = 896.0
margin_right = 1662.0
margin_bottom = 934.0
custom_fonts/font = ExtResource( 2 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name3" type="Label" parent="UI/RightHP/pos3"]
anchor_left = -0.825
anchor_top = 0.5
anchor_right = -0.825
anchor_bottom = 0.5
margin_left = -16.05
margin_top = -19.0
margin_right = 52.95
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos4" type="Label" parent="UI/RightHP"]
visible = false
margin_left = 1536.0
margin_top = 944.0
margin_right = 1662.0
margin_bottom = 982.0
custom_fonts/font = ExtResource( 2 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name4" type="Label" parent="UI/RightHP/pos4"]
anchor_left = -0.825
anchor_top = 0.5
anchor_right = -0.825
anchor_bottom = 0.5
margin_left = -16.05
margin_top = -19.0
margin_right = 52.95
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHP" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos1" type="Label" parent="UI/LeftHP"]
visible = false
margin_left = 192.0
margin_top = 24.0
margin_right = 295.0
margin_bottom = 38.0
text = "Health: 100/100"

[node name="pos2" type="Label" parent="UI/LeftHP"]
visible = false
margin_left = 192.0
margin_top = 200.0
margin_right = 295.0
margin_bottom = 214.0
text = "Health: 100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos3" type="Label" parent="UI/LeftHP"]
visible = false
margin_left = 192.0
margin_top = 344.0
margin_right = 295.0
margin_bottom = 358.0
text = "Health: 100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos4" type="Label" parent="UI/LeftHP"]
visible = false
margin_left = 192.0
margin_top = 544.0
margin_right = 296.0
margin_bottom = 558.0
text = "Health: 100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="UI"]
margin_left = 856.0
margin_top = 56.0
margin_right = 896.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "State"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellPanel" type="Panel" parent="UI"]
visible = false
margin_left = 408.0
margin_top = 128.0
margin_right = 1536.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spells" type="ItemList" parent="UI/SpellPanel"]
margin_left = 24.0
margin_top = 40.0
margin_right = 1112.0
margin_bottom = 472.0
hint_tooltip = "hoi"
custom_fonts/font = ExtResource( 2 )
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellExit" type="Button" parent="UI/SpellPanel"]
margin_left = 1040.0
margin_top = 16.0
margin_right = 1116.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseEnemyPanel" type="Panel" parent="UI"]
visible = false
anchor_bottom = 0.2
margin_left = 552.0
margin_top = 200.0
margin_right = 1288.0
margin_bottom = 624.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseEnemy" type="PopupMenu" parent="UI/ChooseEnemyPanel"]
anchor_left = 0.402
anchor_top = 0.389
anchor_right = 0.402
anchor_bottom = 0.389
margin_left = -151.872
margin_top = -184.048
margin_right = 440.128
margin_bottom = 143.952
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleRight" type="Node2D" parent="."]

[node name="pos1" type="Node2D" parent="BattleRight"]
position = Vector2( 1600, 128 )

[node name="pos2" type="Node2D" parent="BattleRight"]
position = Vector2( 1600, 288 )

[node name="pos3" type="Node2D" parent="BattleRight"]
position = Vector2( 1600, 448 )

[node name="pos4" type="Node2D" parent="BattleRight"]
position = Vector2( 1600, 640 )

[node name="BattleLeft" type="Node2D" parent="."]

[node name="pos1" type="Node2D" parent="BattleLeft"]
position = Vector2( 256, 128 )

[node name="pos2" type="Node2D" parent="BattleLeft"]
position = Vector2( 256, 288 )

[node name="pos3" type="Node2D" parent="BattleLeft"]
position = Vector2( 256, 448 )

[node name="pos4" type="Node2D" parent="BattleLeft"]
position = Vector2( 256, 640 )
[connection signal="pressed" from="UI/BottomPanel/BattleUI/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="UI/BottomPanel/BattleUI/Spells" to="." method="_on_Spells_pressed"]
[connection signal="pressed" from="UI/BottomPanel/BattleUI/Items" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="UI/BottomPanel/BattleUI/Run" to="." method="_on_Attack_pressed"]
[connection signal="item_activated" from="UI/SpellPanel/Spells" to="." method="_on_Spells_item_activated"]
[connection signal="pressed" from="UI/SpellPanel/SpellExit" to="." method="_on_SpellExit_pressed"]
[connection signal="id_pressed" from="UI/ChooseEnemyPanel/ChooseEnemy" to="." method="_on_ChooseEnemy_id_pressed"]
